--- a/static/ember/index.html
+++ b/static/ember/index.html
@@ -11,11 +11,8 @@
     <title>UNO Lending Library</title>
 
     
-<<<<<<< HEAD
-<meta name="lend-database/config/environment" content="%7B%22modulePrefix%22%3A%22lend-database%22%2C%22environment%22%3A%22development%22%2C%22rootURL%22%3A%22%2Fstatic%2Fember%2F%22%2C%22bURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22lend-database%22%2C%22version%22%3A%220.0.0%2B22960459%22%7D%2C%22exportApplicationGlobal%22%3Atrue%7D" />
-=======
-<meta name="lend-database/config/environment" content="%7B%22modulePrefix%22%3A%22lend-database%22%2C%22environment%22%3A%22development%22%2C%22rootURL%22%3A%22%2Fstatic%2Fember%2F%22%2C%22bURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22lend-database%22%2C%22version%22%3A%220.0.0%2Bcabc3632%22%7D%2C%22exportApplicationGlobal%22%3Atrue%7D" />
->>>>>>> 89431ae7b28bff0c82ab3fd4f030b6eafa35dabe
+<meta name="lend-database/config/environment" content="%7B%22modulePrefix%22%3A%22lend-database%22%2C%22environment%22%3A%22development%22%2C%22rootURL%22%3A%22%2Fstatic%2Fember%2F%22%2C%22bURL%22%3A%22%2F%22%2C%22locationType%22%3A%22auto%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22name%22%3A%22lend-database%22%2C%22version%22%3A%220.0.0%2B22a2889e%22%7D%2C%22ember-component-css%22%3A%7B%22terseClassNames%22%3Afalse%7D%2C%22ember-paper%22%3A%7B%22insertFontLinks%22%3Atrue%7D%2C%22exportApplicationGlobal%22%3Atrue%7D" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic"> <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <link integrity="" rel="stylesheet" href="/static/ember/assets/vendor.css">
     <link integrity="" rel="stylesheet" href="/static/ember/assets/lend-database.css">
@@ -29,5 +26,10 @@
     <script src="/static/ember/assets/lend-database.js"></script>
 
     <div id="ember-bootstrap-wormhole"></div>
+
+          <div id="ember-basic-dropdown-wormhole"></div>
+          <div id="paper-wormhole"></div>
+          <div id="paper-toast-fab-wormhole"></div>
+        
   </body>
 </html>
