--- a/static/ember/tests/index.html
+++ b/static/ember/tests/index.html
@@ -8,11 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-<<<<<<< HEAD
-<meta name="lend-database/config/environment" content="%7B%22modulePrefix%22%3A%22lend-database%22%2C%22environment%22%3A%22test%22%2C%22rootURL%22%3A%22%2Fstatic%2Fember%2F%22%2C%22bURL%22%3A%22%2F%22%2C%22locationType%22%3A%22none%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22LOG_ACTIVE_GENERATION%22%3Afalse%2C%22LOG_VIEW_LOOKUPS%22%3Afalse%2C%22rootElement%22%3A%22%23ember-testing%22%2C%22autoboot%22%3Afalse%2C%22name%22%3A%22lend-database%22%2C%22version%22%3A%220.0.0%2B22960459%22%7D%2C%22exportApplicationGlobal%22%3Atrue%7D" />
-=======
-<meta name="lend-database/config/environment" content="%7B%22modulePrefix%22%3A%22lend-database%22%2C%22environment%22%3A%22test%22%2C%22rootURL%22%3A%22%2Fstatic%2Fember%2F%22%2C%22bURL%22%3A%22%2F%22%2C%22locationType%22%3A%22none%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22LOG_ACTIVE_GENERATION%22%3Afalse%2C%22LOG_VIEW_LOOKUPS%22%3Afalse%2C%22rootElement%22%3A%22%23ember-testing%22%2C%22autoboot%22%3Afalse%2C%22name%22%3A%22lend-database%22%2C%22version%22%3A%220.0.0%2Bcabc3632%22%7D%2C%22exportApplicationGlobal%22%3Atrue%7D" />
->>>>>>> 89431ae7b28bff0c82ab3fd4f030b6eafa35dabe
+<meta name="lend-database/config/environment" content="%7B%22modulePrefix%22%3A%22lend-database%22%2C%22environment%22%3A%22test%22%2C%22rootURL%22%3A%22%2Fstatic%2Fember%2F%22%2C%22bURL%22%3A%22%2F%22%2C%22locationType%22%3A%22none%22%2C%22EmberENV%22%3A%7B%22FEATURES%22%3A%7B%7D%2C%22EXTEND_PROTOTYPES%22%3A%7B%22Date%22%3Afalse%7D%7D%2C%22APP%22%3A%7B%22LOG_ACTIVE_GENERATION%22%3Afalse%2C%22LOG_VIEW_LOOKUPS%22%3Afalse%2C%22rootElement%22%3A%22%23ember-testing%22%2C%22autoboot%22%3Afalse%2C%22name%22%3A%22lend-database%22%2C%22version%22%3A%220.0.0%2B22a2889e%22%7D%2C%22ember-component-css%22%3A%7B%22terseClassNames%22%3Afalse%7D%2C%22ember-paper%22%3A%7B%22insertFontLinks%22%3Atrue%7D%2C%22exportApplicationGlobal%22%3Atrue%7D" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic"> <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     
 
     <link rel="stylesheet" href="/static/ember/assets/vendor.css">
